--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 				$('#m').val('');
 				return false;
 			});
-			socket.on('chat message', function (msg) {
-				$('#messages').append($('<li>').text(msg));
+			socket.on('chat message', function (data) {
+				$('#messages').append($('<li>').text(data.senderId + " : "+ data.msg));
 			});
 		});
 
