Add random username during send the message

--- a/index.html
+++ b/index.html
@@ -63,14 +63,22 @@
 	<script>
 		$(function () {
 			var socket = io();
+			let name = ["Dog", "Cat", "Fish", "Lizard", "Turttle"]
+
 			$('form').submit(function (e) {
 				e.preventDefault(); // prevents page reloading
-				socket.emit('chat message', $('#m').val());
+				let randomIndex = Math.floor(Math.random() * name.length);
+
+				socket.emit('chat message', {
+					msg: $('#m').val(),
+					name: name[randomIndex]
+				});
 				$('#m').val('');
 				return false;
 			});
+
 			socket.on('chat message', function (data) {
-				$('#messages').append($('<li>').text(data.senderId + " : "+ data.msg));
+				$('#messages').append($('<li>').text(data.data.name + " : "+ data.data.msg));
 			});
 		});
 
