Add new name call Firefly

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<script>
 		$(function () {
 			var socket = io();
-			let name = ["Dog", "Cat", "Fish", "Lizard", "Turttle"]
+			let name = ["Dog", "Cat", "Fish", "Lizard", "Turttle", "Firefly"]
 
 			$('form').submit(function (e) {
 				e.preventDefault(); // prevents page reloading
